# MPI-OpenMP-CMake

./: CMakeLists.txt  hybrid.c
